Fixed #MBL-10702 Note history text in list getting cut off on bottom.

--- a/content/css/app.less
+++ b/content/css/app.less
@@ -125,7 +125,7 @@
 }
 
 .note-text-item {
-    max-height: 2em;
+    max-height: 5em;
     overflow: hidden;
 }
 
@@ -1210,7 +1210,8 @@ td.entry-table-description {
             padding: 0 !important;
             position: relative;
             text-align: center;
-            width: 68px;
+            width: 10%;
+            min-width: 68px;
             border-radius: 5px;
             color:  #fff;
             >  span {
